Propiedades básicas clase 2 CCS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -14,7 +19,7 @@
     <div class="card">
         <h2 id="write">Write</h2>
         <div class="caja-contenedora">
-            <img src="https://img.freepik.com/vector-premium/ilustracion-vectorial-concepto-actividad-humana-diaria_1317464-11658.jpg?w=360" alt="Persona escribiendo">
+            <img src="https://images.vexels.com/content/257073/preview/writing-girl-color-stroke-1cfa72.png" alt="Persona escribiendo">
         </div>
         <p>Wrote <br> Written</p>
     </div>
@@ -22,7 +27,7 @@
     <div class="card">
         <h2 id="sleep">Sleep</h2>
         <div class="caja-contenedora">
-            <img src="https://img.freepik.com/vector-premium/mujer-anciana-durmiendo-pacificamente-cama-disfrutando-noche-tranquila_98402-181884.jpg "alt="Mujer anciana durmiendo">
+            <img src="https://cdn-icons-png.flaticon.com/512/5601/5601185.png"alt="Mujer anciana durmiendo">
         </div>
         <p>Slept <br> Slept</p>
 
@@ -30,7 +35,7 @@
     <div class="card">
         <h2 id="teach">Teach</h2>
         <div class="caja-contenedora">
-            <img src="https://img.freepik.com/vector-gratis/ilustracion-concepto-ensenar_114360-1708.jpg" alt="Persona enseñando"> 
+            <img src="https://cdn-icons-png.flaticon.com/512/4696/4696866.png" alt="Persona enseñando"> 
         </div>
         <p>Tought<br> Tought</p>
     </div>
@@ -38,7 +43,7 @@
     <div class="card">
         <h2 id="drawn">Drawn </h2>
         <div class="caja-contenedora">
-            <img src="https://img.freepik.com/vector-premium/mujer-feliz-trabajando-tableta-estudiante-disenador-personajes-disfruta-proyecto-dibujo-espacio-trabajo_348404-926.jpg" alt="Persona dibujando "> 
+            <img src="https://images.vexels.com/media/users/3/242557/isolated/preview/cb7660b8f3e2ec4f206eca7678d1a549-elementos-de-pegatinas-de-regreso-a-la-escuela-11.png" alt="Persona dibujando "> 
         </div>
         <p>Drew<br>Drawn</p>
     </div>
